[package]
name = "ioc"
version = "0.8.0"
authors = ["Felix Köpge <fkoep@mailbox.org>"]
license = "MIT"

description = "An Inversion-of-Control library in Rust."
documentation = "https://docs.rs/ioc"
repository = "https://github.com/fkoep/ioc-rs"
readme = "README.md"
keywords = ["inversion", "control", "dependency", "injection", "di"]
categories = ["data-structures", "rust-patterns"]

[workspace]
members = ["macros"]

[features]
nightly = ["downcast/nightly"]

[dependencies]
derive_more = "0.7"
downcast = "0.9"
lazy_static = "1.0"
quick-error = "1.2"
variadic_generics = "0.1"

[dev-dependencies]
ioc_macros = { path = "macros" }
