[package]
name = "ioc"
version = "0.9.1"
authors = ["Felix Köpge <fkoep@mailbox.org>"]
license = "MIT"
edition = "2018"

description = "An Inversion-of-Control library in Rust."
documentation = "https://docs.rs/ioc"
repository = "https://github.com/fkoep/ioc-rs"
readme = "README.md"
keywords = ["inversion", "control", "dependency", "injection", "di"]
categories = ["data-structures", "rust-patterns"]

[dependencies]
derive_more = "0.99.16"
downcast = "0.11.0"
once_cell = "1.8.0"
variadic_generics = "0.1.2"
