[package]
name = "ioc"
version = "0.11.0"
authors = ["Felix Köpge <fkoep@mailbox.org>"]
license = "MIT"
edition = "2021"

description = "An Inversion-of-Control library in Rust."
documentation = "https://docs.rs/ioc"
repository = "https://github.com/fkoep/ioc-rs"
readme = "README.md"
keywords = ["inversion", "control", "dependency", "injection", "di"]
categories = ["data-structures", "rust-patterns"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1.53"
downcast = "0.11.0"
futures = "0.3.21"
once_cell = "1.8.0"
variadic_generics = "0.1.2"
