[package]
name = "ioc"
version = "0.8.0"
authors = ["Felix Köpge <fkoep@mailbox.org>"]
license = "MIT"

description = "An Inversion-of-Control library in Rust."
documentation = "https://docs.rs/ioc"
repository = "https://github.com/fkoep/ioc-rs"
readme = "README.md"
keywords = ["inversion", "control", "dependency", "injection", "di"]
categories = ["data-structures", "rust-patterns"]

[features]
nightly = ["downcast/nightly"]

[dependencies]
derive_more = "*"
# downcast = "0.9"
downcast = { path = "../../downcast-rs" }
lazy_static = "*"
quick-error = "*"
variadic_generics = "0.1"
