[package]
name = "ioc_cfg"
version = "0.8.0"
authors = ["Felix Köpge <fkoep@mailbox.org>"]
license = "MIT"

# description = "An Inversion-of-Control library in Rust."
# documentation = "https://docs.rs/ioc"
# repository = "https://github.com/fkoep/ioc-rs"
# readme = "README.md"
# keywords = ["inversion", "control", "dependency", "injection", "di"]
# categories = ["data-structures", "rust-patterns"]

[features]
json = [] # TODO
pickle = [] # TODO
yaml = [] # TODO
ini = [] # TODO

[dependencies]
ioc = { path = "../ioc" }
serde-value = "*"
ron = { version = "0.1", optional = true }
toml = { version = "0.4", optional = true }

